Fix backface-visibility

--- a/src/app/scenes/game/features/card/card.component.scss
+++ b/src/app/scenes/game/features/card/card.component.scss
@@ -14,6 +14,7 @@
   text-align: center;
   transition: transform 0.4s;
   transform-style: preserve-3d;
+  backface-visibility: hidden;
 }
 
 :host(.flip-card.is-flipped .flip-card-inner),
